--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-site for xiaomo
+<html xmlns="http://w3.org/1999/xhtml">
+<head>
+<title>小默的研究中心</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<link rel-"stylesheet" href="site.css" type="text/css" media="screen" />
+</head>
+<body>
+xiaomo's site
+</body>
+</html>
