--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>小默的研究中心</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel-"stylesheet" href="site.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="site.css" type="text/css" media="screen" />
 </head>
 <body>
 <div id="page">
