add some comment

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
 </head>
 <body>
+<!--
+笨蛋嫁给我吧.
+-->
 <div id="page">
 <div id="left">
 <div id="code">
