--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>小默的研究中心</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
+<link ref="Shorcut Icon" href="fav.ico" />
+<link ref="Bookmark" href="fav.ico" />
 </head>
 <body>
 <!--
