--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ __END__
 <pre>
 
 所属部落  :   二次元拯救世界
-我的博客  :   <a href="http://wpxiaomo.sinaapp.com">小默的研究中心</a>
+我的博客  :   <a href="http://wangxiaomo.github.com/oct">小默的研究中心</a>
+原博客    :   <a href="http://wpxiaomo.sinaapp.com">小默SAE</a>
 我的GitHub:   <a href="http://github.com/wangxiaomo">xiaomo</a>
 
 Q Q:497052184
