--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@ __END__
   <div id="user_intro">
 <pre>
 
-所属部落  :   二次元拯救世界
-我的博客  :   <a href="http://wangxiaomo.github.com/oct">小默的研究中心</a>
-原博客    :   <a href="http://wpxiaomo.sinaapp.com">小默SAE</a>
+所属部落    :   二次元拯救世界
+octopress  :   <a href="http://wangxiaomo.github.com/oct">小默的研究中心(延迟更新)</a>
+wordpress :   <a href="http://wpxiaomo.sinaapp.com">小默的研究中心(同步更新)</a>
+轻博客(技术)：<a href="http://codevvip.diandian.com">小默的点点</a>
+轻博客(文艺)：<a href="http://iwenyi.diandian.com">略文艺</a>
 我的GitHub:   <a href="http://github.com/wangxiaomo">xiaomo</a>
 
 Q Q:497052184
@@ -82,7 +84,7 @@ GTalk:wxm4ever@gmail.com
 MSN:wxm4ever@gmail.com
 Email:497052184@qq.com
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
-微博:<a href="http://t.sina.com.cn/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
+微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
 </pre> 
   </div>
