--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@ __END__
 <pre>
 
 所属部落    :   二次元拯救世界
-octopress  :   <a href="http://wangxiaomo.github.com/oct">小默的研究中心(延迟更新)</a>
-wordpress :   <a href="http://wpxiaomo.sinaapp.com">小默的研究中心(同步更新)</a>
-轻博客(技术)：<a href="http://codevvip.diandian.com">小默的点点</a>
-轻博客(文艺)：<a href="http://iwenyi.diandian.com">略文艺</a>
-我的GitHub:   <a href="http://github.com/wangxiaomo">xiaomo</a>
+wordpress :   <a href="http://wpxiaomo.sinaapp.com">小默的研究中心</a>
+GitHub:   <a href="http://github.com/wangxiaomo">xiaomo</a>
+Hacker. Coder. And Hacker.
 
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
