修改 github pages.

--- a/index.html
+++ b/index.html
@@ -1,95 +1,122 @@
-<html xmlns="http://w3.org/1999/xhtml">
+<!doctype html>
+<html lang="en">
 <head>
-<title>小默的研究中心</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" href="site.css" type="text/css" media="screen" />
-<link ref="Shorcut Icon" href="fav.ico" />
-<link ref="Bookmark" href="fav.ico" />
+  <title>小默的研究中心</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
+  <link ref="Shorcut Icon" href="fav.ico" />
+  <link ref="Bookmark" href="fav.ico" />
 </head>
 <body>
 <!--
 笨蛋嫁给我吧.
 -->
 <div id="page">
-<div id="left">
-<div id="code">
-<pre>
+  <div id="left">
+    <div id="code">
+      <pre>
+どっか上の空で   さっぱり闻いてないんだろう？
+你心不在焉 完全没在听吧？
+わざとこぼすサイン   见逃す君
+故意传出信号 你却视若无睹
+ほら   いつだって   同じで   分かり合ってる？   ¨とんだ勘违いだよ
+对吧 一直以来 都是一样 彼此互相了解吧？……这真是个天大的误会
+ここに居る仆に気付けないんだろう
+我就在这里 你却没注意到吧
+人込みにまぎれて   ひとり
+被人群吞没 独自一人
+虚しくって   见上げる空
+空洞地仰望天空
+届かない会话キャッチボール
+传递不到的对话 只剩下敷衍
+孤独は增してく
+孤独感不断膨胀
 
-=pod
+のっぺりとした   Day by Day   まったく今日も同じだろう？
+然而单调苍白 既然注定日复一日 今天也仍会和以前相同吧？
+とけ込めない人に   惯れない街
+在无法习惯的城市 无法融入的人群
+Ah   人波に   立ち止まり   振り返り   确かめた足迹
+Ah 在人群中 停住脚步 转身回头 确认了的足迹
+前より   ほんの少しは步けてるかも
+看来真是更略微向前走了一些
+すれ违った街のガラスに
+必定分歧的道路 种种碎片中
+寂しげに映った自分
+被寂寞倒映出的自己
+ムカつくんだ   そんな自分も
+不管对这样的自己 还是冷漠的世界
+无関心な世界も
+都一样地厌恶
 
-=head1 My IntroDuction
+Hey!! Hey!!   应えて   谁かいませんか？
+Hey!! Hey!! 回答我啊 有谁在吗？
+ずっと探しても   答えないや
+即使一直寻找 也没有回答
+Hey!! Hey!!   仆だけが仆を作るなら
+Hey!! Hey!! 只有自己才能做好自己吧
+“どうだっていい”なんて   思わないで   本当の声を¨
+“谁会在乎”这样的话 其实不是字面所说 而是……
 
-王杰,coder name:小默. HIT. Vimer.Perler.Linuxer.
+Hey!! Hey!!   ひとりじゃ   生きれないだろ？
+Hey!! Hey!! 一个人的话 果然还是活不下去吧？
+ハート舍ててまで   とけ込めない
+若是舍弃了心 就不可能与人相容
+Hey!! Hey!!   谛める理由はいらない
+Hey!! Hey!! 我不需要放弃的理由
+君だって   踏ん张って   この街で   生きていくんだ
+因为你在这里 我才大步前进 这样地活下来
 
-=cut
-
-=head1 Code
-
-use Moose to Introduce me. hope u'll like it.
-
-=cut
-
-package MySelf;
-use Moose;
- 
-has 'name'     =&gt; ( is=&gt;'ro', default=&gt;'xiaomo' );
-has 'email'    =&gt; ( is=&gt;'ro', default=&gt;join('@','wxm4ever','gmail.com') );
-has 'features' =&gt; (
-    is      =&gt; 'ro',
-    default =&gt; 'PHP | Perl | Python...',
-);
- 
-sub info{
-    my $self = shift;
-    return join("\n",
-        "name: "     . $self-&gt;name,
-        "email: "    . $self-&gt;email,
-        "features: " . $self-&gt;features,
-    );
-}
-no Moose;
-1; # write on mummy's day.
-
-=head1 Author
-
-小默(wxm4ever@gmail.com)
-
-=cut
-
-__END__
-
-</pre>
-</div>
-</div>
-<div id="right">
-<div id="infobox">
-  <img src="xiaomo.jpg" />
-  <div id="user_info">
-    <br />
-    常居:&nbsp;山东威海<br />
-    wangxiaomo(@github)
+Hey!! Hey!!   应えて   谁かいませんか？
+Hey!! Hey!! 回答我啊 有谁在吗？
+ずっと探しても   答えないから
+即使一直寻找 也没有回答
+Hey!! Hey!!   仆だけが仆を作るんだ
+Hey!! Hey!! 只有我才能做好我自己
+泣いたって、笑って   憎んだって爱して   生きていこう
+哭也好笑也罢 恨也好爱也罢 这样地活下去
+      </pre>
+    </div>
   </div>
-  <div id="user_intro">
-<pre>
+  <div id="right">
+    <div id="infobox">
+      <img src="xiaomo.jpg" />
+      <div id="user_info">
+        <br />
+        常居:&nbsp;山东威海<br />
+        <a href="https://github.com/wangxiaomo" target="_blank">wangxiaomo(@github)</a>
+      </div>
+      <div id="user_intro">
+        <pre>
 
 所属部落  :   二次元拯救世界
-GitHub    :   <a href="http://github.com/wangxiaomo">xiaomo</a>
-
 
 Hacker. Coder. And Hacker.
 
+秉持信念正直地走下去虽然没有错，不过因此而无法行动的话，
+倒不如试着圆滑一下。柔和圆滑地做人，也没什么关系嘛！这么
+走下去，一定会发现自己绝对不能放弃的人生真谛，不是吗？ 
 
+微出门去夺回太阳，夺回被囚禁在这黑暗的浸长日子里，被大家
+遗忘了的太阳。不管在什么样的地方，不管是什么样的处境，都
+会有太阳存在。既不是日轮也不是这小街上的老板，而是你们自
+己的太阳。太阳会常常被云彩遮挡而无法看见，尽管如此，只要
+仰望天空，肯定会有太阳从云彩的空隙中放出光芒的时刻到来。
+所以，我们为了不错过那一刻，必须抬头仰望着天空，挺直我们
+的腰板，一定要直视着太阳活下去！你去告诉那些一脸苟且偷生
+的家伙们听，看看天空吧！ 
+
+-------------------------------
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
-MSN:wxm4ever@gmail.com
-Email:497052184@qq.com
+Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a><a href="mailto:497052184@qq.com">497052184@qq.com</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
-</pre> 
+        </pre> 
+      </div>
+    </div>
   </div>
-</div>
-</div>
 </div>
 
 </body>
