--- a/index.html
+++ b/index.html
@@ -88,10 +88,16 @@ Hey!! Hey!! 只有我才能做好我自己
       </div>
       <div id="user_intro">
         <pre>
+        
+游戏决定信仰
+二次元拯救世界
 
-所属部落  :   二次元拯救世界
+*Hacker And Hacking ALL THE TIME*
 
-Hacker. Coder. And Hacker.
+小时候我总嚷嚷着，努力是了改变世界，然而现在的我会觉得，
+有些人努力只是为了变成一个普通人，有些人努力只是为了给
+自己交代，也许我们始终都只是一个小人物，但这并不妨碍我
+们选择用什么样的方式活下去。
 
 秉持信念正直地走下去虽然没有错，不过因此而无法行动的话，
 倒不如试着圆滑一下。柔和圆滑地做人，也没什么关系嘛！这么
@@ -99,12 +105,11 @@ Hacker. Coder. And Hacker.
 
 微出门去夺回太阳，夺回被囚禁在这黑暗的浸长日子里，被大家
 遗忘了的太阳。不管在什么样的地方，不管是什么样的处境，都
-会有太阳存在。既不是日轮也不是这小街上的老板，而是你们自
-己的太阳。太阳会常常被云彩遮挡而无法看见，尽管如此，只要
-仰望天空，肯定会有太阳从云彩的空隙中放出光芒的时刻到来。
-所以，我们为了不错过那一刻，必须抬头仰望着天空，挺直我们
-的腰板，一定要直视着太阳活下去！你去告诉那些一脸苟且偷生
-的家伙们听，看看天空吧！ 
+会有太阳存在。太阳会常常被云彩遮挡而无法看见，尽管如此，
+只要仰望天空，肯定会有太阳从云彩的空隙中放出光芒的时刻到
+来。所以，我们为了不错过那一刻，必须抬头仰望着天空，挺直
+我们的腰板，一定要直视着太阳活下去！你去告诉那些一脸苟且
+偷生的家伙们听，看看天空吧！ 
 
 -------------------------------
 Q Q:497052184
