修改个人说明.add 知乎 to contact area.

--- a/index.html
+++ b/index.html
@@ -92,32 +92,39 @@ Hey!! Hey!! 只有我才能做好我自己
 游戏决定信仰
 二次元拯救世界
 
-*Hacker And Hacking ALL THE TIME*
+Vimer.Hacker.
+呆萌可爱的程序员.
+你想回到无聊的现实里
+还是想要与我一起改变现实?
 
-小时候我总嚷嚷着，努力是了改变世界，然而现在的我会觉得，
-有些人努力只是为了变成一个普通人，有些人努力只是为了给
-自己交代，也许我们始终都只是一个小人物，但这并不妨碍我
-们选择用什么样的方式活下去。
+因为一个人而喜欢五月天
+末日前一起去看了五月天演唱会
+所以
+末日无憾.
 
-秉持信念正直地走下去虽然没有错，不过因此而无法行动的话，
-倒不如试着圆滑一下。柔和圆滑地做人，也没什么关系嘛！这么
-走下去，一定会发现自己绝对不能放弃的人生真谛，不是吗？ 
+外设发烧友.
+了解的比拥有的多,QDS一个.
+有一颗逆袭的心.
+烧与不烧其实并不重要
+男人总归得有些爱好.
+退烧中。
 
-微出门去夺回太阳，夺回被囚禁在这黑暗的浸长日子里，被大家
-遗忘了的太阳。不管在什么样的地方，不管是什么样的处境，都
-会有太阳存在。太阳会常常被云彩遮挡而无法看见，尽管如此，
-只要仰望天空，肯定会有太阳从云彩的空隙中放出光芒的时刻到
-来。所以，我们为了不错过那一刻，必须抬头仰望着天空，挺直
-我们的腰板，一定要直视着太阳活下去！你去告诉那些一脸苟且
-偷生的家伙们听，看看天空吧！ 
+某日突然觉醒.
+从此坠入二次元.
+不喜cos.
+不喜各种二次元在三次元的乱入.
+喜欢 key 所有的故事.
+二次元属性:s&amp;偏m.
 
--------------------------------
+
+...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
 Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a><a href="mailto:497052184@qq.com">497052184@qq.com</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
+知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
         </pre> 
       </div>
     </div>
