--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a><a href="mailto:
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
 知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
+博客:<a href="https://github.com/wangxiaomo/wangxiaomo.github.com/issues">BlogIssues</a>
+
+写博客4年,因为sae坑爹的收费政策停掉了.然后索性就丢掉了之前的积累.
+好在人生是向前看的.
+今后虽然不会像以前那样勤于写博客.
+但会更加注意积累与收获.
+人生不只有技术.
+还有很多身边的人,身边的事.
+
+
         </pre> 
       </div>
     </div>
