--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Hey!! Hey!! 只有我才能做好我自己
       <img src="xiaomo.jpg" />
       <div id="user_info">
         <br />
-        常居:&nbsp;山东威海<br />
+        常居:&nbsp;北京朝阳豆瓣<br />
         <a href="https://github.com/wangxiaomo" target="_blank">wangxiaomo(@github)</a>
       </div>
       <div id="user_intro">
@@ -126,6 +126,8 @@ Vimer.Hacker.
 喜欢 key 所有的故事.
 二次元属性:s&amp;偏m.
 
+减肥&amp;健身中.
+脱宅中.
 
 ...............................
 Q Q:497052184
@@ -135,7 +137,7 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a><a href="mailto:
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
 知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
-博客:<a href="https://github.com/wangxiaomo/wangxiaomo.github.com/issues">BlogIssues</a>
+<strike>博客:<a href="http://wpxiaomo.sinaapp.com">http://wpxiaomo.sinaapp.com</a></strike>
 
 写博客4年,因为sae坑爹的收费政策停掉了.
 然后索性就丢掉了之前的积累.
