add line-through style

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@ Vimer.Hacker.
 ...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
-Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a><a href="mailto:497052184@qq.com">497052184@qq.com</a>
+Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
 知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
-<strike>博客:<a href="http://wpxiaomo.sinaapp.com">http://wpxiaomo.sinaapp.com</a></strike>
+博客:<a href="http://wpxiaomo.sinaapp.com" style="text-decoration: line-through">http://wpxiaomo.sinaapp.com</a>
 
 写博客4年,因为sae坑爹的收费政策停掉了.
 然后索性就丢掉了之前的积累.
