--- a/index.html
+++ b/index.html
@@ -156,5 +156,14 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
 <p class="more">
   <a href="https://github.com/wangxiaomo"><img style="position: fixed; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
 </p>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44630398-1', 'wangxiaomo.github.io');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
