--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ Hey!! Hey!! 只有我才能做好我自己
       </div>
       <div id="user_intro">
         <pre>
-        
+work@douban 
+       
 游戏决定信仰
 二次元拯救世界
 
