--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
   </div>
 </div>
 <p class="more">
-  <a href="https://github.com/wangxiaomo"><img style="position: fixed; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
+  <a href="https://github.com/wangxiaomo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 </p>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
