add baidu meta confirm

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <head>
   <title>小默的研究中心</title>
   <meta charset="utf-8" />
+  <meta name="baidu-site-verification" content="JXc5NXuu58" />
   <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
   <link ref="Shorcut Icon" href="fav.ico" />
   <link ref="Bookmark" href="fav.ico" />
