--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <head>
   <title>小默的研究中心</title>
   <meta charset="utf-8" />
-  <meta name="baidu-site-verification" content="JXc5NXuu58" />
+  <meta name="description" content="welcome to wangxiaomo's personal home page" />
+  <link rel="author" href="http://www.douban.com/people/wxm4ever/" />
   <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
-  <link ref="Shorcut Icon" href="fav.ico" />
-  <link ref="Bookmark" href="fav.ico" />
+  <link rel="Shorcut Icon" href="fav.ico" />
+  <link rel="Bookmark" href="fav.ico" />
 </head>
 <body>
 <div id="page">
@@ -91,7 +92,7 @@ Hey!! Hey!! 只有我才能做好我自己
   </div>
   <div id="right">
     <div id="infobox">
-      <img src="xiaomo.jpg" />
+      <img src="xiaomo.jpg" alt="wangxiaomo's gravatar" />
       <div id="user_info">
         <br />
         常居:&nbsp;北京朝阳豆瓣<br />
