--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
   <title>小默的研究中心</title>
   <meta charset="utf-8" />
   <meta name="description" content="welcome to wangxiaomo's personal home page" />
+  <meta name="og:title" content="wangxiaomo's awesome home page" />
+  <meta name="og:type" content="article" />
+  <meta name="og:image" content="http://wangxiaomo.wo-le-ge.ca/xiaomo.jpg" />
+  <meta name="og:url" content="http://wangxiaomo.wo-le-ge.ca" />
+  <meta name="og:description" content="welcome to wangxiaomo's personal home page" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:url" content="http://wangxiaomo.wo-le-ge.ca" />
+  <meta name="twitter:title" content="wangxiaomo's awesome home page" />
+  <meta name="twitter:description" content="welcome to wangxiaomo's personal home page" />
+  <meta name="twitter:image" content="http://wangxiaomo.wo-le-ge.ca/xiaomo.jpg" />
   <link rel="author" href="http://www.douban.com/people/wxm4ever/" />
   <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
   <link rel="Shorcut Icon" href="fav.ico" />
