--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Vimer.Hacker.
 ...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
+Google+:<a href="http://plus.google.com/+王小默4ever?rel=author">王小默4ever</a>
 Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
