--- a/index.html
+++ b/index.html
@@ -178,6 +178,8 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
 
   ga('create', 'UA-44630398-1', 'wangxiaomo.github.io');
   ga('send', 'pageview');
+  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff726330c8f8bc0b3cb0176f9e806a027' type='text/javascript'%3E%3C/script%3E"));
 </script>
 </body>
 </html>
