--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <head>
   <title>小默的研究中心</title>
   <meta charset="utf-8" />
+  <meta name="keywords" content="xiaomo,wangxiaomo,小默,小默的研究中心,小默的主页" />
   <meta name="description" content="welcome to wangxiaomo's personal home page" />
   <meta name="og:title" content="wangxiaomo's awesome home page" />
   <meta name="og:type" content="article" />
@@ -178,6 +179,7 @@ Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
 
   ga('create', 'UA-44630398-1', 'wangxiaomo.github.io');
   ga('send', 'pageview');
+
   var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
   document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff726330c8f8bc0b3cb0176f9e806a027' type='text/javascript'%3E%3C/script%3E"));
 </script>
