--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <meta name="twitter:title" content="wangxiaomo's awesome home page" />
   <meta name="twitter:description" content="welcome to wangxiaomo's personal home page" />
   <meta name="twitter:image" content="http://wangxiaomo.wo-le-ge.ca/xiaomo.jpg" />
+  <meta name="baidu-site-verification" content="z87SdCXELj" />
   <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
   <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
   <link rel="Shorcut Icon" href="fav.ico" />
