--- a/index.html
+++ b/index.html
@@ -112,18 +112,20 @@ Hey!! Hey!! 只有我才能做好我自己
       </div>
       <div id="user_intro">
         <pre>
-work@douban 
-       
-游戏决定信仰
-二次元拯救世界
+<!-- RD@douban -->
+渣前端/水全端/精通打杂
+在一个管三餐的地方写PHP了
+希望在这个地方
+可以全方面搞幺蛾子
 
 Vimer.Hacker.
-呆萌可爱的程序员.
+程序员.工程师.
 你想回到无聊的现实里
 还是想要与我一起改变现实?
 
 因为一个人而喜欢五月天
-末日前一起去看了五月天演唱会
+末日前
+一起去看了五月天演唱会
 所以
 末日无憾.
 
@@ -139,11 +141,34 @@ Vimer.Hacker.
 不喜cos.
 不喜各种二次元在三次元的乱入.
 喜欢 key 所有的故事.
-二次元属性:s&amp;偏m.
+二次元属性:s&偏m.
 
-减肥&amp;健身中.
+日在校园后
+告别二次元
+
+减肥&健身中.
 脱宅中.
+越来越觉得之前烧过的耳机啦、键盘啦
+不如烧一个相机来的实在
+烧相机也是一条不归路
+不过最起码能让你走出去
+接触更多的人
+享受更多的美景
+记忆更多的定格
 
+#摔 GR好贵！
+#摔 x100s又降价了，还是买不起
+
+
+探索北京中。
+Targets: 八达岭，紫禁城，雍和宫，天安门
+*已离开帝都*
+
+很多事情都是互斥的
+适当的折中才能更好的推进。
+
+
+http://wangxiaomo.wo-le-ge.ca/
 ...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
