change wo-le-ge.ca to wolege.ca

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <meta name="description" content="welcome to wangxiaomo's personal home page" />
   <meta name="og:title" content="wangxiaomo's awesome home page" />
   <meta name="og:type" content="article" />
-  <meta name="og:image" content="http://wangxiaomo.wo-le-ge.ca/xiaomo.jpg" />
-  <meta name="og:url" content="http://wangxiaomo.wo-le-ge.ca" />
+  <meta name="og:image" content="http://wangxiaomo.wolege.ca/xiaomo.jpg" />
+  <meta name="og:url" content="http://wangxiaomo.wolege.ca" />
   <meta name="og:description" content="welcome to wangxiaomo's personal home page" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:url" content="http://wangxiaomo.wo-le-ge.ca" />
+  <meta name="twitter:url" content="http://wangxiaomo.wolege.ca" />
   <meta name="twitter:title" content="wangxiaomo's awesome home page" />
   <meta name="twitter:description" content="welcome to wangxiaomo's personal home page" />
-  <meta name="twitter:image" content="http://wangxiaomo.wo-le-ge.ca/xiaomo.jpg" />
+  <meta name="twitter:image" content="http://wangxiaomo.wolege.ca/xiaomo.jpg" />
   <meta name="baidu-site-verification" content="z87SdCXELj" />
   <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
   <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
@@ -168,7 +168,7 @@ Targets: 八达岭，紫禁城，雍和宫，天安门
 适当的折中才能更好的推进。
 
 
-http://wangxiaomo.wo-le-ge.ca/
+http://wangxiaomo.wolege.ca/
 ...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
