update personal page

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
   <meta name="description" content="welcome to wangxiaomo's personal home page" />
   <meta name="og:title" content="wangxiaomo's awesome home page" />
   <meta name="og:type" content="article" />
-  <meta name="og:image" content="http://wangxiaomo.wolege.ca/xiaomo.jpg" />
-  <meta name="og:url" content="http://wangxiaomo.wolege.ca" />
+  <meta name="og:image" content="http://wangxiaomo.github.io/statics/images/xiaomo.jpg" />
+  <meta name="og:url" content="http://wangxiaomo.github.io" />
   <meta name="og:description" content="welcome to wangxiaomo's personal home page" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:url" content="http://wangxiaomo.wolege.ca" />
+  <meta name="twitter:url" content="http://wangxiaomo.github.io" />
   <meta name="twitter:title" content="wangxiaomo's awesome home page" />
   <meta name="twitter:description" content="welcome to wangxiaomo's personal home page" />
-  <meta name="twitter:image" content="http://wangxiaomo.wolege.ca/xiaomo.jpg" />
+  <meta name="twitter:image" content="http://wangxiaomo.github.io/statics/images/xiaomo.jpg" />
   <meta name="baidu-site-verification" content="z87SdCXELj" />
   <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
-  <link rel="stylesheet" href="site.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="statics/css/main.css" type="text/css" media="screen" />
   <link rel="Shorcut Icon" href="fav.ico" />
   <link rel="Bookmark" href="fav.ico" />
 </head>
@@ -100,11 +100,12 @@ Hey!! Hey!! 只有我才能做好我自己
 泣いたって、笑って   憎んだって爱して   生きていこう
 哭也好笑也罢 恨也好爱也罢 这样地活下去
       </pre>
+      <img src="statics/images/gintama.jpeg" class="footer-img" />
     </div>
   </div>
   <div id="right">
     <div id="infobox">
-      <img src="xiaomo.jpg" alt="wangxiaomo's gravatar" />
+      <img src="statics/images/xiaomo.jpg" alt="wangxiaomo's gravatar" />
       <div id="user_info">
         <br />
         常居:&nbsp;北京朝阳豆瓣<br />
@@ -136,13 +137,6 @@ Vimer.Hacker.
 男人总归得有些爱好.
 退烧中。
 
-某日突然觉醒.
-从此坠入二次元.
-不喜cos.
-不喜各种二次元在三次元的乱入.
-喜欢 key 所有的故事.
-二次元属性:s&偏m.
-
 日在校园后
 告别二次元
 
@@ -168,12 +162,12 @@ Targets: 八达岭，紫禁城，雍和宫，天安门
 适当的折中才能更好的推进。
 
 
-http://wangxiaomo.wolege.ca/
+http://wangxiaomo.github.io/
 ...............................
 Q Q:497052184
 GTalk:wxm4ever@gmail.com
 Google+:<a href="http://plus.google.com/+王小默4ever?rel=author">王小默4ever</a>
-Email:<a href="mailto:wxm4ever@gmail.com">wxm4ever@gmail.com</a>
+Email:<a href="mailto:wxm4ever+githubpages@gmail.com">wxm4ever@gmail.com</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
 微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
 校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
