--- a/hackchina.html
+++ b/hackchina.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>example</title>
+    <title>HackChina工作室</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="statics/assets/css/style.css">
     <link type="text/css" rel="stylesheet" href="statics/assets/css/prettify.css"/>
