--- a/hackchina.html
+++ b/hackchina.html
@@ -3,10 +3,13 @@
   <head>
     <title>HackChina工作室</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" content="xiaomo,wangxiaomo,小默,小默的研究中心,小默的工作室,HackChina,HackChina工作室" />
+    <meta name="description" content="Welcome to HackChina Studio.承接网站开发、服务器运维、App开发、平面设计、技术咨询等业务。" />
+    <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
+    <link rel="Shorcut Icon" href="fav.ico" />
+    <link rel="Bookmark" href="fav.ico" />
     <link rel="stylesheet" href="statics/assets/css/style.css">
     <link type="text/css" rel="stylesheet" href="statics/assets/css/prettify.css"/>
-    
-
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="statics/assets/js/prettify.js"></script>
 
