change cdn path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="Bookmark" href="fav.ico" />
     <link rel="stylesheet" href="statics/assets/css/style.css">
     <link type="text/css" rel="stylesheet" href="statics/assets/css/prettify.css"/>
-    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="//libs.useso.com/js/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="statics/assets/js/prettify.js"></script>
     <style>
 #content {
