--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <p>1.web开发，<code>PHP/Python/Nodejs/JSP/ASP.NET</code> <code>Redis/Memcache/MQ/Celery/thrift</code> <code>Apache/Nginx/Unicorn</code></p>
 <p>2.SPA，<code>AngularJS/Backbone</code></p>
 <p>3.自动化构建，<code>gulp/grunt</code> <code>bower</code> <code>compass</code> <code>node相关</code></p>
-<p>4.wordpress,shuipfcms,dedecms,帝国cms</p>
+<p>4.wordpress,laravel,thinkphp,shuipfcms,dedecms,帝国cms</p>
 <p>5.微信平台开发、微信支付</p>
 <a name="native_h5_app"></a><h3>native/H5 App<a class="anchorlink" href="#native_h5_app"></a></h3>
 <p>原生应用开发、H5应用开发。android/ios均可。发布帐号需要客户自行提供。</p>
