--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script type="text/javascript" src="statics/js/jquery.lazyload.min.js"></script>
     <script type="text/javascript" src="statics/assets/js/prettify.js"></script>
     <style>
+#wrapper {
+  box-shadow: 5px 5px 14px #ccc;
+}
 #content {
   width: 410px;
   float: left;
