--- a/xiaomo.html
+++ b/xiaomo.html
@@ -108,7 +108,7 @@ Hey!! Hey!! 只有我才能做好我自己
       <img src="statics/images/xiaomo.jpg" alt="wangxiaomo's gravatar" />
       <div id="user_info">
         <br />
-        常居:&nbsp;北京朝阳豆瓣<br />
+        常居:&nbsp;山西太原已离京<br />
         <a href="https://github.com/wangxiaomo" target="_blank">wangxiaomo(@github)</a>
       </div>
       <div id="user_intro">
