--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 笨蛋嫁给我吧.
            2013/01/11
 
+update 2014/09/29
+结婚
+
+update 2016/02/04
+生子
+
 -->
 <!doctype html>
 <html lang="en">
@@ -17,18 +23,6 @@
   <title>小默的研究中心</title>
   <meta charset="utf-8" />
   <meta name="keywords" content="xiaomo,wangxiaomo,小默,小默的研究中心,小默的主页" />
-  <meta name="description" content="welcome to wangxiaomo's personal home page" />
-  <meta name="og:title" content="wangxiaomo's awesome home page" />
-  <meta name="og:type" content="article" />
-  <meta name="og:image" content="http://wangxiaomo.github.io/statics/images/xiaomo.jpg" />
-  <meta name="og:url" content="http://wangxiaomo.github.io/xiaomo.html" />
-  <meta name="og:description" content="welcome to wangxiaomo's personal home page" />
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:url" content="http://wangxiaomo.github.io/xiaomo.html" />
-  <meta name="twitter:title" content="wangxiaomo's awesome home page" />
-  <meta name="twitter:description" content="welcome to wangxiaomo's personal home page" />
-  <meta name="twitter:image" content="http://wangxiaomo.github.io/statics/images/xiaomo.jpg" />
-  <meta name="baidu-site-verification" content="z87SdCXELj" />
   <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
   <link rel="stylesheet" href="statics/css/main.css" type="text/css" media="screen" />
   <link rel="Shorcut Icon" href="fav.ico" />
@@ -191,17 +185,5 @@ Email:<a href="mailto:wxm4ever+githubpages@gmail.com">wxm4ever@gmail.com</a>
 <p class="more">
   <a href="https://github.com/wangxiaomo"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 </p>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-44630398-1', 'wangxiaomo.github.io');
-  ga('send', 'pageview');
-
-  var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-  document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Ff726330c8f8bc0b3cb0176f9e806a027' type='text/javascript'%3E%3C/script%3E"));
-</script>
 </body>
 </html>
