--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@ Hey!! Hey!! 只有我才能做好我自己
 泣いたって、笑って   憎んだって爱して   生きていこう
 哭也好笑也罢 恨也好爱也罢 这样地活下去
       </pre>
-      <img src="statics/images/gintama.jpeg" class="footer-img" />
     </div>
   </div>
   <div id="right">
@@ -107,76 +106,33 @@ Hey!! Hey!! 只有我才能做好我自己
       </div>
       <div id="user_intro">
         <pre>
-<!-- RD@douban -->
+
 渣前端/水全端/精通打杂
-在一个管三餐的地方写PHP了
-希望在这个地方
-可以全方面搞幺蛾子
 
 Vimer.Hacker.
 程序员.工程师.
 你想回到无聊的现实里
 还是想要与我一起改变现实?
 
-因为一个人而喜欢五月天
-末日前
-一起去看了五月天演唱会
-所以
-末日无憾.
-
-外设发烧友.
-了解的比拥有的多,QDS一个.
-有一颗逆袭的心.
-烧与不烧其实并不重要
-男人总归得有些爱好.
-退烧中。
-
-日在校园后
-告别二次元
-
-减肥&健身中.
-脱宅中.
-越来越觉得之前烧过的耳机啦、键盘啦
-不如烧一个相机来的实在
-烧相机也是一条不归路
-不过最起码能让你走出去
-接触更多的人
-享受更多的美景
-记忆更多的定格
-
-#摔 GR好贵！
-#摔 x100s又降价了，还是买不起
-
-
-探索北京中。
-Targets: 八达岭，紫禁城，雍和宫，天安门
-*已离开帝都*
-
 很多事情都是互斥的
 适当的折中才能更好的推进。
 
+Taylor Swift
+摄影
+山地车
+BMX
+外设
+ESports
 
-http://wangxiaomo.github.io/
 ...............................
 Q Q:497052184
-GTalk:wxm4ever@gmail.com
-Google+:<a href="http://plus.google.com/+王小默4ever?rel=author">王小默4ever</a>
 Email:<a href="mailto:wxm4ever+githubpages@gmail.com">wxm4ever@gmail.com</a>
+Email:<a href="mailto:codevvip@yeah.net">codevvip@yeah.net</a>
 豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
-微博:<a href="http://weibo.com/wangxiaomo521">http://t.sina.com.cn/wangxiaomo521</a>
-校内:<a href="http://www.renren.com/wangxiaomo521">http://www.renren.com/wangxiaomo521</a>
+Twitter:<a href="https://twitter.com/wxm4ever">https://twitter.com/wxm4ever</a>
+Instagram:<a href="https://www.instagram.com/wxm4ever/">https://www.instagram.com/wxm4ever/</a>
 知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
-博客:<a href="http://wpxiaomo.sinaapp.com" style="text-decoration: line-through">http://wpxiaomo.sinaapp.com</a>
-
-写博客4年,因为sae坑爹的收费政策停掉了.
-然后索性就丢掉了之前的积累.
-好在人生是向前看的.
-今后虽然不会像以前那样勤于写博客.
-但会更加注意积累与收获.
-人生不只有技术.
-还有很多身边的人,身边的事.
-
-
+Gist:<a href="http://gist.wangxiaomo.space">http://gist.wangxiaomo.space</a>
         </pre> 
       </div>
     </div>
