--- a/index.html
+++ b/index.html
@@ -111,18 +111,13 @@ Hey!! Hey!! 只有我才能做好我自己
 
 Vimer.Hacker.
 程序员.工程师.
-你想回到无聊的现实里
-还是想要与我一起改变现实?
 
-很多事情都是互斥的
-适当的折中才能更好的推进。
-
-Taylor Swift
-摄影
-山地车
-BMX
-外设
-ESports
+我愿化身石桥
+受
+五百年风吹
+五百年日晒
+五百年雨打
+但求你从桥上走过
 
 ...............................
 Q Q:497052184
@@ -141,5 +136,15 @@ Gist:<a href="http://gist.wangxiaomo.space">http://gist.wangxiaomo.space</a>
 <p class="more">
   <a href="https://github.com/wangxiaomo"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 </p>
+<script>
+(function(){
+    var bp = document.createElement('script');
+    bp.src = '//push.zhanzhang.baidu.com/push.js';
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+    // baidu share
+    window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"1","bdMiniList":["mshare","sqq","weixin","douban","mail","copy","print"],"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"5","bdPos":"right","bdTop":"175"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
+})();
+</script>
 </body>
 </html>
