--- a/index.html
+++ b/index.html
@@ -1,125 +1,69 @@
-<!--
- _          __      ___   __   _   _____  __    __  _       ___   _____       ___  ___   _____  
- | |        / /     /   | |  \ | | /  ___| \ \  / / | |     /   | /  _  \     /   |/   | /  _  \ 
- | |  __   / /     / /| | |   \| | | |      \ \/ /  | |    / /| | | | | |    / /|   /| | | | | | 
- | | /  | / /     / / | | | |\   | | |  _    }  {   | |   / / | | | | | |   / / |__/ | | | | | | 
- | |/   |/ /     / /  | | | | \  | | |_| |  / /\ \  | |  / /  | | | |_| |  / /       | | | |_| | 
- |___/|___/     /_/   |_| |_|  \_| \_____/ /_/  \_\ |_| /_/   |_| \_____/ /_/        |_| \_____/ }
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
+<html xmlns="http://www.w3.org/1999/xhtml">  
+<head>  
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />  
+<title>wangxiaomo@github</title>  
+<style type="text/css">  
+  * {margin: 0; padding: 0;}  
+  body {background: black;}  
+  canvas {display: block;}  
+</style>  
+</head>  
+<body>  
+  <canvas id="c"></canvas>  
+  <script type="text/javascript">  
+    var c = document.getElementById("c");  
+    var ctx = c.getContext("2d");  
+  
+    //making the canvas full screen  
+    c.height = window.innerHeight;  
+    c.width = window.innerWidth;  
+  
+    //tokens characters - taken from the unicode charset  
+    var tokens = "abcdefghijklmnopqrstuvwxyz1234567890!@#$%^&*()-+";  
+    //converting the string into an array of single characters  
+    tokens = tokens.split("");  
+  
+    var font_size = 10;  
+    var columns = c.width / font_size; //number of columns for the rain  
+    //an array of drops - one per column  
+    var drops = [];  
+    //x below is the x coordinate  
+    //1 = y co-ordinate of the drop(same for every drop initially)  
+    for (var x = 0; x < columns; x++)  
+        drops[x] = 1;  
+  
+    //drawing the characters  
+    function draw() {  
+        //Black BG for the canvas  
+        //translucent BG to show trail  
+        ctx.fillStyle = "rgba(0, 0, 0, 0.05)";  
+        ctx.fillRect(0, 0, c.width, c.height);  
+  
+        ctx.fillStyle = "#0F0"; //green text  
+        ctx.font = font_size + "px arial";  
+        //looping over drops  
+        for (var i = 0; i < drops.length; i++) {  
+            //a random tokens character to print  
+            var text = tokens[Math.floor(Math.random() * tokens.length)];  
+            //x = i*font_size, y = value of drops[i]*font_size  
+            ctx.fillText(text, i * font_size, drops[i] * font_size);  
+  
+            //sending the drop back to the top randomly after it has crossed the screen  
+            //adding a randomness to the reset to make the drops scattered on the Y axis  
+            if (drops[i] * font_size > c.height && Math.random() > 0.975)  
+                drops[i] = 0;  
+  
+            //incrementing Y coordinate  
+            drops[i]++;  
+        }  
+    }  
+  
+    setInterval(draw, 50);  
 
-
-笨蛋嫁给我吧.
-           2013/01/11
-
-update 2014/09/29
-结婚
-
-update 2016/02/04
-生子
-
--->
-<!doctype html>
-<html lang="en">
-<head>
-  <title>小默的研究中心</title>
-  <meta charset="utf-8" />
-  <meta name="keywords" content="xiaomo,wangxiaomo,小默,小默的研究中心,小默的主页" />
-  <link rel="author" href="https://plus.google.com/+王小默4ever?rel=author" />
-  <link rel="stylesheet" href="statics/css/main.css" type="text/css" media="screen" />
-  <link rel="Shorcut Icon" href="fav.ico" />
-  <link rel="Bookmark" href="fav.ico" />
-</head>
-<body>
-<div id="page">
-  <div id="left">
-    <div id="code">
-      <pre>
-どっか上の空で   さっぱり闻いてないんだろう？
-わざとこぼすサイン   见逃す君
-ほら   いつだって   同じで   分かり合ってる？   ¨とんだ勘违いだよ
-ここに居る仆に気付けないんだろう
-人込みにまぎれて   ひとり
-虚しくって   见上げる空
-届かない会话キャッチボール
-孤独は增してく
-
-
-のっぺりとした   Day by Day   まったく今日も同じだろう？
-とけ込めない人に   惯れない街
-Ah   人波に   立ち止まり   振り返り   确かめた足迹
-前より   ほんの少しは步けてるかも
-すれ违った街のガラスに
-寂しげに映った自分
-ムカつくんだ   そんな自分も
-无関心な世界も
-
-
-Hey!! Hey!!   应えて   谁かいませんか？
-ずっと探しても   答えないや
-Hey!! Hey!!   仆だけが仆を作るなら
-“どうだっていい”なんて   思わないで   本当の声を¨
-
-
-Hey!! Hey!!   ひとりじゃ   生きれないだろ？
-ハート舍ててまで   とけ込めない
-Hey!! Hey!!   谛める理由はいらない
-君だって   踏ん张って   この街で   生きていくんだ
-
-
-Hey!! Hey!!   应えて   谁かいませんか？
-ずっと探しても   答えないから
-Hey!! Hey!!   仆だけが仆を作るんだ
-泣いたって、笑って   憎んだって爱して   生きていこう
-      </pre>
-    </div>
-  </div>
-  <div id="right">
-    <div id="infobox">
-      <img src="statics/images/xiaomo.jpg" alt="wangxiaomo's gravatar" />
-      <div id="user_info">
-        <br />
-        常居:&nbsp;山西太原已离京<br />
-        <a href="https://github.com/wangxiaomo" target="_blank">wangxiaomo(@github)</a>
-      </div>
-      <div id="user_intro">
-        <pre>
-
-渣前端/水全端/精通打杂
-
-Vimer.Hacker.
-程序员.工程师.
-
-我愿化身石桥
-受
-五百年风吹
-五百年日晒
-五百年雨打
-但求你从桥上走过
-
-...............................
-Q Q:497052184
-Email:<a href="mailto:wxm4ever+githubpages@gmail.com">wxm4ever@gmail.com</a>
-Email:<a href="mailto:codevvip@yeah.net">codevvip@yeah.net</a>
-豆瓣:<a href="http://www.douban.com/people/wxm4ever">http://www.douban.com/people/wxm4ever</a>
-Twitter:<a href="https://twitter.com/wxm4ever">https://twitter.com/wxm4ever</a>
-Instagram:<a href="https://www.instagram.com/wxm4ever/">https://www.instagram.com/wxm4ever/</a>
-知乎:<a href="http://www.zhihu.com/people/wxm4ever">http://www.zhihu.com/people/wxm4ever</a>
-        </pre> 
-      </div>
-    </div>
-  </div>
-</div>
-<p class="more">
-  <a href="https://github.com/wangxiaomo"><img style="position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
-</p>
-<script>
-(function(){
-    var bp = document.createElement('script');
-    bp.src = '//push.zhanzhang.baidu.com/push.js';
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(bp, s);
-    // baidu share
-    window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"1","bdMiniList":["mshare","sqq","weixin","douban","mail","copy","print"],"bdPic":"","bdStyle":"0","bdSize":"16"},"slide":{"type":"slide","bdImg":"5","bdPos":"right","bdTop":"175"}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
-})();
-</script>
-</body>
+    c.onclick = function() {
+      window.location = "https://github.com/wangxiaomo"
+    }
+  </script>  
+</body>  
 </html>
