use bible verse

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     c.width = window.innerWidth;  
   
     //tokens characters - taken from the unicode charset  
-    var tokens = "abcdefghijklmnopqrstuvwxyz1234567890!@#$%^&*()-+";  
+    var tokens = "Casting all your anxieties on him, because he cares for you.";
     //converting the string into an array of single characters  
-    tokens = tokens.split("");  
+    tokens = tokens.split("");
   
-    var font_size = 10;  
+    var font_size = 12;  
     var columns = c.width / font_size; //number of columns for the rain  
     //an array of drops - one per column  
     var drops = [];  
